<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="app_name">KUSmartBus</string>
    <string name="action_settings">Settings</string>
    <string name="map_title">Map</string>
    <string name="stop_title">Bus stop</string>
    <string name="route_title">Find route</string>
    <string name="bus_line">Line %d</string>
    <string name="bus_no_line">Not in line</string>
    <string name="bus_parking">Parked</string>
    <string name="meter">m</string>
    <string name="kilometer">km</string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading</string>
    <string name="all_line">All lines</string>
    <string name="no_bus">No bus</string>
    <string name="there_to">To</string>
    <string name="there_from">From</string>
    <string name="select_stop">Select bus stop</string>
    <string name="select_stop_from">Select starting location</string>
    <string name="select_stop_to">Select destination</string>
    <string name="line_passing">Lines: </string>
    <string name="fanpage">Facebook Page</string>
    <string name="notify">Notify me</string>
    <string name="notify_ok">You\'ll be notified 5 minutes before next bus arrival.</string>
    <string name="notify_msg">%1$s (%2$s) will arrive in %3$d minutes</string>
    <string name="route_map">Route map</string>
    <string name="sort_distance">By distance</string>
    <string name="sort_name">By name</string>
    
    <!-- report  -->
    <string name="report_menu">Suggestion/Report</string>
    <string name="report_menu_short">Suggestion</string>
    <string name="report_bus">Reporting bus:</string>
    <string name="report_line_map">To report incorrect line or driver, select bus on map view and tap the infobox.</string>
    <string name="report_line_comment">If reporting incorrect line, please enter correct line number.</string>
    <string name="report_type_line">Incorrect line</string>
    <string name="report_type_bug">Bug report</string>
    <string name="report_type_driver">Driver</string>
    <string name="report_type_comment">Comments / Suggestion</string>
    <string name="report_thankyou">Thank you for your submission. Your report will be processed as soon as possible.</string>
    
    <!-- vote -->
    <string name="rate_title">Rate KUSmartBus</string>
    <string name="rate_explanation">If KUSmartBus is helpful to you, please give us 5 stars in Play Store.</string>
    <string name="rate_now">Rate</string>
    <string name="rate_later">Later</string>
    <string name="rate_never">No thanks :(</string>
    
    <!-- errors -->
    <string name="map_api_error">Can\'t start Google Maps</string>
    <string name="require_play">Google Play Service must be installed</string>
    <string name="json_error">Error</string>
    <string name="internet_error">Network Error</string>
    <string name="no_stop">Invalid bus stop</string>
    <string name="nfc_min_ver">NFC tag writer requires Android 4.0</string>
    <string name="no_nfc" tools:ignore="MissingTranslation">NFC device not present</string>
    <string name="nfc_lost" tools:ignore="MissingTranslation">NFC lost</string>
    <string name="nfc_io_error" tools:ignore="MissingTranslation">NFC write error</string>
    <string name="nfc_io" tools:ignore="MissingTranslation">NFC IO Error</string>
    <string name="nfc_message_error" tools:ignore="MissingTranslation">NFC message error</string>
    <string name="gcm_not_avail">Google Cloud Messaging is not available</string>
    
    <!-- time -->
    <string name="min">min</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="unknown_time">N/A</string>
    <string name="lt_min">&lt; 1</string>
    
    <string name="fb_page_id" translatable="false">1390683647835494</string>

    <!-- nfc programming -->
    <string name="uri" tools:ignore="MissingTranslation">URI</string>
    <string name="write_protect" tools:ignore="MissingTranslation">Write protect</string>
    <string name="pick_stop" tools:ignore="MissingTranslation">Pick stop</string>
    <string name="home" tools:ignore="MissingTranslation">Launch app</string>
    <string name="nfc_prog" tools:ignore="MissingTranslation">NFC Program</string>
    <string name="tap_to_write" tools:ignore="MissingTranslation">Tap tag to write</string>
    <string name="write_protect_confirm_title" tools:ignore="MissingTranslation">Write protect tag?</string>
    <string name="write_protect_confirm_body" tools:ignore="MissingTranslation">This cannot be undone.</string>
</resources>
