<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/facebook"
        support:showAsAction="ifRoom"
        android:title="@string/fanpage"
        android:menuCategory="container"
        android:orderInCategory="1000"
        android:icon="@drawable/ic_facebook"/>
    <item
        android:id="@+id/reportMenu"
        support:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="2000"
        android:title="@string/report_menu" android:titleCondensed="@string/report_menu_short"/>
    <item
        android:id="@+id/tagProgram"
        support:showAsAction="never"
        android:menuCategory="container"
        android:orderInCategory="5000"
        android:title="@string/nfc_prog" android:icon="@android:drawable/ic_menu_upload"/>

</menu>
